fixed issue where the sidebar got covered by the header hiding the channels text

--- a/src/styles/channelsidebar.css
+++ b/src/styles/channelsidebar.css
@@ -1,6 +1,7 @@
 
-nav {
+.channel-sidebar-nav {
     background-color: #B4A7D6;
+    margin-top: 4rem;
     width: 240px;
     height: 100vh;
     padding: 20px 0;
